# phishcoach

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: smoke_graph.py  try_author.py
src/phishcoach/agents/: __init__.py  _structured.py  author.py
src/phishcoach/graph/: __init__.py
src/phishcoach/prompts/: __init__.py  author_system.md  coach_system.md
src/phishcoach/schemas/: __init__.py
tests/: fakes.py
