[project]
name = "phishcoach"
version = "0.1.0"
description = "Adaptive phishing detection trainer — LangGraph + Claude"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Wenxi Chen", email = "johnchen77w@gmail.com" }
]

dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.9.0",
    "streamlit>=1.40.0",
    "langfuse>=2.50.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
